[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binheat"
dynamic = ["version"]
description = "Binary heat map generator"
readme = "README.rst"
requires-python = ">=3.7"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "binheat@varonathe.org" }
]

keywords = [
    "binary heat map",
    "heat map",
    "pdf",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "click     >= 7.0",
    "reportlab ~= 3.4",
]

[project.scripts]
binheat = "binheat:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/binheat"
"Bug Tracker" = "https://github.com/jwodder/binheat/issues"

[tool.hatch.version]
path = "binheat.py"

[tool.hatch.build.targets.sdist]
include = [
    "/binheat.py",
    "/docs",
    "/examples",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
